// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-control-group css-1p3lwl3"
  data-g2-c16t="true"
  data-g2-component="ControlGroup"
>
  <div
    class="wp-components-flex-item wp-components-control-group-item css-9zud3p"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="css-k9b0kj"
      data-destructive="false"
      data-g2-c16t="true"
      data-g2-component="Button"
      data-icon="false"
      type="button"
    >
      <span
        class="wp-components-view wp-components-flex css-1gjqylm"
        data-g2-c16t="true"
        data-g2-component="Flex"
      >
        <span
          class="wp-components-flex-item wp-components-flex-block css-1xcbse6"
          data-g2-c16t="true"
          data-g2-component="ButtonContent"
        >
          Let It
        </span>
      </span>
      <span
        class="wp-components-elevation css-1l26w1c"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
  <div
    class="wp-components-flex-item wp-components-control-group-item css-16055n4"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="css-1khrkm8"
      data-destructive="false"
      data-g2-c16t="true"
      data-g2-component="Button"
      data-icon="false"
      type="button"
    >
      <span
        class="wp-components-view wp-components-flex css-1gjqylm"
        data-g2-c16t="true"
        data-g2-component="Flex"
      >
        <span
          class="wp-components-flex-item wp-components-flex-block css-1xcbse6"
          data-g2-c16t="true"
          data-g2-component="ButtonContent"
        >
          Go
        </span>
      </span>
      <span
        class="wp-components-elevation css-1l26w1c"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
</div>
`;

exports[`props should render mixed control types 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-control-group css-1p3lwl3"
  data-g2-c16t="true"
  data-g2-component="ControlGroup"
>
  <div
    class="wp-components-flex-item wp-components-control-group-item css-9zud3p"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <div
      class="wp-components-view wp-components-flex wp-components-base-field wp-components-select css-1cu2zw3"
      data-g2-c16t="true"
      data-g2-component="Select"
    >
      <div
        class="wp-components-flex-item wp-components-flex-block css-2c2lyi"
        data-g2-c16t="true"
        data-g2-component="FlexBlock"
      >
        <select
          class="css-112gptz"
          data-g2-component="SelectInput"
          id="salutations"
        />
      </div>
      <div
        class="wp-components-flex-item css-1uudps2"
        data-g2-c16t="true"
        data-g2-component="FlexItem"
      >
        <span
          class="wp-components-text css-5i0kly"
          data-g2-c16t="true"
          data-g2-component="Text"
        >
          <div
            class="wp-components-icon css-cciynq"
            data-g2-c16t="true"
            data-g2-component="Icon"
          >
            <svg
              fill="none"
              height="14"
              size="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </div>
        </span>
      </div>
    </div>
  </div>
  <div
    class="wp-components-flex-item wp-components-control-group-item css-1uc9azp"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <div
      class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-8caa0l"
      data-g2-c16t="true"
      data-g2-component="TextInput"
    >
      <div
        class="wp-components-flex-item wp-components-flex-block css-1mt9vp0"
        data-g2-c16t="true"
        data-g2-component="TextInputContent"
      >
        <input
          class="css-mtctxg"
          data-g2-c16t="true"
          data-g2-component="TextInputInput"
          id="fname"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="wp-components-flex-item wp-components-control-group-item css-16055n4"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="css-1khrkm8"
      data-destructive="false"
      data-g2-c16t="true"
      data-g2-component="Button"
      data-icon="false"
      type="button"
    >
      <span
        class="wp-components-view wp-components-flex css-1gjqylm"
        data-g2-c16t="true"
        data-g2-component="Flex"
      >
        <span
          class="wp-components-flex-item wp-components-flex-block css-1xcbse6"
          data-g2-c16t="true"
          data-g2-component="ButtonContent"
        >
          Let It
        </span>
      </span>
      <span
        class="wp-components-elevation css-1l26w1c"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
</div>
`;
